Cross-validation of models

--- a/RBPdetection.ipynb
+++ b/RBPdetection.ipynb
@@ -630,24 +630,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "289b13d9",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape:  (145421, 1024) Check? True\n",
+      "PCA fitted.\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
+      "5it [1:27:01, 1044.33s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 OneClassSVM: 0.03588978187538049\n",
+      "F1 IsolationForest: 0.0441696817805398\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# train one-class models on high imbalance with reduced features\n",
     "nonrbp_embeddings_df_big = pd.read_csv(data_dir+'annotated_nonRBPs_embeddings30.csv')\n",
-    "nonrbp_embed_big = np.asarray(nonrbp_embeddings_df.iloc[:, 2:])\n",
+    "nonrbp_embed_big = np.asarray(nonrbp_embeddings_df_big.iloc[:, 2:])\n",
     "features_big = np.concatenate((rbp_embed, nonrbp_embed_big))\n",
     "labels_big = np.asarray([1]*rbp_embed.shape[0] + [0]*nonrbp_embed_big.shape[0])\n",
+    "print('Shape: ', features_big.shape, 'Check?', features_big.shape[0]==labels_big.shape[0])\n",
     "\n",
     "imbalance = rbp_embed.shape[0]/nonrbp_embed_big.shape[0]\n",
     "outer_cv = StratifiedKFold(n_splits=5, shuffle=True)\n",
@@ -680,24 +704,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9a80fd15",
    "metadata": {},
    "outputs": [],
    "source": [
     "# define cross-validation iterator\n",
     "imbalance = rbp_embed.shape[0]/nonrbp_embed.shape[0]\n",
-    "inner_cv = StratifiedKFold(n_splits=4, shuffle=True)\n",
+    "inner_cv = StratifiedKFold(n_splits=2, shuffle=True)\n",
     "performances = {'F1':[], 'P':[], 'AUC':[]}\n",
-    "cpus = -2\n",
+    "cpus = 4\n",
     "\n",
     "# define models and hyper parameters\n",
     "lr = LogisticRegression(class_weight='balanced', max_iter=5000)\n",
     "params_lr = {'C': np.logspace(0.2, 1, 5)}\n",
-    "xgb = XGBClassifier(scale_pos_weight=1/imbalance)\n",
-    "params_xgb = {'max_depth': [2, 4, 6], 'n_estimators': [250, 500]}\n",
+    "xgb = XGBClassifier(scale_pos_weight=1/imbalance, n_jobs=cpus)\n",
+    "params_xgb = {'max_depth': [3, 5], 'n_estimators': [100, 250]}\n",
     "mlp = MLPClassifier(max_iter=1000)\n",
-    "params_mlp = {'hidden_layer_sizes':[(100,), (30,2)]}\n",
+    "params_mlp = {'hidden_layer_sizes':[(100,), (30,2), (30, 10, 5)]}\n",
     "\n",
     "# define grid search\n",
     "lr = GridSearchCV(lr, cv=inner_cv, param_grid=params_lr, scoring='f1', n_jobs=cpus, verbose=2)\n",
@@ -708,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "41a895e5",
    "metadata": {},
    "outputs": [
@@ -716,55 +740,193 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "evaluating model:  MLPerceptron\n",
-      "Fitting 4 folds for each of 2 candidates, totalling 8 fits\n",
-      "[CV] END .........................hidden_layer_sizes=(30, 2); total time= 1.5min\n",
-      "[CV] END .........................hidden_layer_sizes=(30, 2); total time= 2.5min\n",
-      "[CV] END .........................hidden_layer_sizes=(30, 2); total time= 3.5min\n",
-      "[CV] END .........................hidden_layer_sizes=(30, 2); total time= 2.5min\n",
-      "[CV] END ..........................hidden_layer_sizes=(100,); total time=41.8min\n",
-      "[CV] END ..........................hidden_layer_sizes=(100,); total time=44.3min\n",
-      "[CV] END ..........................hidden_layer_sizes=(100,); total time=47.9min\n",
-      "[CV] END ..........................hidden_layer_sizes=(100,); total time=50.0min\n"
+      "(20640, 1024) (20640,)\n",
+      "tuning model:  MLPerceptron\n",
+      "Fitting 2 folds for each of 3 candidates, totalling 6 fits\n",
+      "[CV] END .........................hidden_layer_sizes=(30, 2); total time= 1.3min\n",
+      "[CV] END .....................hidden_layer_sizes=(30, 10, 5); total time= 2.7min\n",
+      "[CV] END .........................hidden_layer_sizes=(30, 2); total time= 3.4min\n",
+      "[CV] END .....................hidden_layer_sizes=(30, 10, 5); total time= 2.4min\n",
+      "[CV] END ..........................hidden_layer_sizes=(100,); total time=11.2min\n",
+      "[CV] END ..........................hidden_layer_sizes=(100,); total time=11.4min\n",
+      "tuning model:  XGBoost\n",
+      "Fitting 2 folds for each of 4 candidates, totalling 8 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:03:25] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[CV] END ......................max_depth=3, n_estimators=100; total time=  15.7s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:03:41] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[CV] END ......................max_depth=3, n_estimators=100; total time=  17.1s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:03:58] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[CV] END ......................max_depth=3, n_estimators=250; total time=  43.0s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:04:41] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[CV] END ......................max_depth=3, n_estimators=250; total time=  44.2s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:05:25] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[CV] END ......................max_depth=5, n_estimators=100; total time=  29.0s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:05:54] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[CV] END ......................max_depth=5, n_estimators=100; total time=  28.4s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:06:23] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[CV] END ......................max_depth=5, n_estimators=250; total time=  52.2s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:07:15] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[CV] END ......................max_depth=5, n_estimators=250; total time=  50.2s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[00:08:05] WARNING: /private/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/pip-install-w5n3w6k9/xgboost_a8a36401f804426fb00f941f2eae565c/build/temp.macosx-11.0-arm64-3.9/xgboost/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "tuning model:  logistic\n",
+      "Fitting 2 folds for each of 5 candidates, totalling 10 fits\n"
      ]
     }
    ],
    "source": [
-    "# test model performance\n",
+    "# tune hyperparams on subpart of data\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, labels, stratify=labels, test_size=0.2, random_state=42)\n",
+    "X_tune, _, y_tune, _ = train_test_split(X_train, y_train, stratify=y_train, test_size=0.5, random_state=42) # tune two-fold on 20% of data\n",
+    "print(X_tune.shape, y_tune.shape)\n",
+    "param_dict = {}\n",
+    "for model_name, model in models.items():\n",
+    "    print('tuning model: ', model_name)\n",
+    "    model.fit(X_tune, y_tune)\n",
+    "    best_params = model.best_params_\n",
+    "    param_dict[model_name] = model.best_params_\n",
     "\n",
+    "# evaluate performance with tuned models\n",
+    "lr = LogisticRegression(class_weight='balanced', max_iter=5000)\n",
+    "xgb = XGBClassifier(scale_pos_weight=1/imbalance, n_jobs=cpus)\n",
+    "mlp = MLPClassifier(max_iter=1000)\n",
+    "models = {'MLPerceptron': mlp, 'XGBoost': xgb, 'logistic': lr}\n",
     "for model_name, model in models.items():\n",
     "    print('evaluating model: ', model_name)\n",
-    "    model.fit(X_train, y_train)\n",
-    "    best_model = model.best_estimator_\n",
+    "    best_params = param_dict[model_name]\n",
+    "    best_model = model.set_params(**best_params)\n",
+    "    best_model.fit(X_train, y_train)\n",
     "    preds = best_model.predict(X_test)\n",
     "    probs = best_model.predict_proba(X_test)\n",
     "    performances['F1'].append(f1_score(y_test, preds))\n",
     "    performances['P'].append(precision_score(y_test, preds))\n",
     "    performances['AUC'].append(roc_auc_score(y_test, probs[:,1]))\n",
     "    print(pd.DataFrame(performances))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "2217b3eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'best_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/p1/fvz7cyr12yl0lf647b14byy80000gn/T/ipykernel_4687/2074715960.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbest_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'best_model' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "best_model"
    ]
   },
   {
@@ -919,7 +1081,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
