benchmark ready to go

--- a/RBPdetection.ipynb
+++ b/RBPdetection.ipynb
@@ -20,22 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "floating-array",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import re\n",
+    "import subprocess\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm\n",
+    "import RBPdetection_utils as rbpu\n",
     "from random import sample\n",
     "from Bio import SeqIO, Entrez\n",
+    "from tqdm.notebook import tqdm\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.decomposition import PCA\n",
     "from sklearn.manifold import TSNE\n",
     "from sklearn.svm import OneClassSVM\n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -48,14 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "solved-arabic",
    "metadata": {},
    "outputs": [],
    "source": [
     "# set directories\n",
+    "pfam_file = '/Users/Dimi/GoogleDrive/PhD/3_PHAGEBASE/32_DATA/RBP_detection/Pfam-A_extended.hmm'\n",
+    "hmm_path = '/Users/Dimi/hmmer-3.3.1'\n",
     "data_dir = '/Users/Dimi/GoogleDrive/PhD/3_PHAGEBASE/32_DATA/RBP_detection'\n",
-    "results_dir = '/Users/Dimi/GoogleDrive/PhD/3_PHAGEBASE/33_RESULTS/RBP_detection'"
+    "results_dir = '/Users/Dimi/GoogleDrive/PhD/3_PHAGEBASE/33_RESULTS/RBP_detection'\n",
+    "phanns_dir = '/Users/dimi/Documents/GitHub/PhANNs-master/web_server'"
    ]
   },
   {
@@ -75,6 +81,14 @@
     "2. The functions RBP_collection and RBP_filters will process the MilalrdLab data into two sets of phage RBPs and nonRBPs based on available annotation, and applying several filters to ensure quality (deleting dubious annotations, short proteins, etc...)\n",
     "3. The final RBP and nonRBP datasets are also timestamped for easy recollection in the future.\n",
     "4. Finally, the RBPs and nonRBPs are transformed into protein embeddings: cfr protein_embeddings_cloud (too intensive for local computer, so compute with GPU in Kaggle notebooks)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce20af8d",
+   "metadata": {},
+   "source": [
+    "#### Collecting and processing MillardLab data"
    ]
   },
   {
@@ -325,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "id": "outer-confidence",
    "metadata": {},
    "outputs": [],
@@ -339,7 +353,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "moral-strategy",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -473,10 +489,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd4d7594",
+   "metadata": {},
+   "source": [
+    "#### Computing embeddings\n",
+    "\n",
+    "This is done in the protein_embeddings_cloud notebook on Kaggle, utilizing a GPU for speedup."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97242789",
+   "metadata": {},
+   "source": [
+    "## 2. Constructing custom RBP domain HMMs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ae15157",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "bound-temple",
    "metadata": {},
    "source": [
-    "## 2. Learning patterns and evaluating models\n",
+    "## 3. Learning patterns and evaluating models\n",
     "\n",
     "Here, we build an XGBoost classifier to discriminate between phage RBPs and phage nonRBPs, as defined in the processing above. We train our model on all data before October 2021. This allows for a separate and final benchmark against PhANNs using the sequence data that only became available during the last three months of 2021. Therefore, the embeddings that were computed in the cloud also include the record data of each corresponding data point. Then we split according to this date.\n",
     "\n",
@@ -485,6 +527,14 @@
     "- the One-class approaches don't seem to work, at least not at a split of 1:10. Perhaps the high dimensionality is also a problem...\n",
     "- The XGBoost classifier seems to work best so far.\n",
     "- The AUC metric considers both the majority and minority class, which can give an overly optimistic estimate of performance. The F1 score considers only the positive/minority class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35212beb",
+   "metadata": {},
+   "source": [
+    "#### Load processed data  & filter up to SEP 2021"
    ]
   },
   {
@@ -503,7 +553,6 @@
     }
    ],
    "source": [
-    "# load processed data + filter up to SEP 2021\n",
     "rbps_em = pd.read_csv(data_dir+'/annotated_RBPs_2022-01_embeddings.csv')\n",
     "nonrbps_em = pd.read_csv(data_dir+'/annotated_nonRBPs_2022-01_embeddings.csv')\n",
     "months = ['OCT-2021', 'NOV-2021', 'DEC-2021']\n",
@@ -528,7 +577,7 @@
    "id": "3edbe2b6",
    "metadata": {},
    "source": [
-    "#### PCA & TSNE"
+    "#### Explore the embeddings with PCA & tSNE"
    ]
   },
   {
@@ -597,7 +646,7 @@
    "id": "71f23ba0",
    "metadata": {},
    "source": [
-    "#### Cross-validated evaluation"
+    "#### Nested cross-validation: optimize hyperparameters and evaluate model performance"
    ]
   },
   {
@@ -1220,7 +1269,7 @@
     "    y_train, y_test = labels[train_outer], labels[test_outer]\n",
     "\n",
     "    # define inner loop (in GridSearchCV)\n",
-    "    tuned_xgb = GridSearchCV(xgb, cv=inner_cv, param_grid=params_xgb, scoring='f1', verbose=2)\n",
+    "    tuned_xgb = GridSearchCV(xgb, cv=inner_cv, param_grid=params_xgb, scoring='f1')\n",
     "    tuned_xgb.fit(X_train, y_train)\n",
     "    print(tuned_xgb.best_params_)\n",
     "\n",
@@ -1268,7 +1317,7 @@
    "source": [
     "# store predictions for further use (PR curves & PRAUC)\n",
     "xgb_results = pd.concat([pd.DataFrame(preds, columns=['Predictions']), \n",
-    "                        pd.DataFrame(probabilities, columns=['Probability negative', 'Probability positive'])], axis=1)\n",
+    "                        pd.DataFrame(probabilities[:,1], columns=['Score_pos'])], axis=1)\n",
     "xgb_results.to_csv(results_dir+'/xgboost_4foldCV_results.csv', index=False)"
    ]
   },
@@ -1328,24 +1377,81 @@
    "id": "cff9ca16",
    "metadata": {},
    "source": [
-    "## 3. Benchmarking domain-based approach, ML-based approach and PhANNs"
+    "## 4. Benchmarking domain-based approach, ML-based approach and PhANNs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "id": "5fd7b70c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def phanns_predict(sequences_df, phanns_dir, results_dir):\n",
+    "    \"\"\"\n",
+    "    This function predicts the class of a bunch of sequences using PhANNs models (cfr. Cantu et al., 2020)\n",
+    "    \n",
+    "    Input:\n",
+    "    - sequences_df: a dataframe with protein sequences (ProteinSeq) and corresponding ids (protein_id)\n",
+    "        to make predictions for.\n",
+    "    - phanns_dir: the directory of the web_server module of the PhANNs repository\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # save all the sequences as separate fastas in the /uploads directory of PhANNs\n",
+    "    #bar = tqdm(total=sequences_df.shape[0], desc='Running PhANNs...')\n",
+    "    for i, sequence in enumerate(sequences_df['ProteinSeq']):\n",
+    "        # write FASTA file in directory\n",
+    "        this_id = sequences_df['protein_id'][i]\n",
+    "        fasta = open(phanns_dir+'/uploads/'+this_id+'.fasta', 'w')\n",
+    "        fasta.write('>'+this_id+'\\n'+sequence+'\\n')\n",
+    "        fasta.close()\n",
+    "    \n",
+    "    # run PhANNs predictions\n",
+    "    cd_str = 'cd ' + phanns_dir # change directory\n",
+    "    raw_str = 'python run_server_once.py'\n",
+    "    command = cd_str+'; '+ raw_str\n",
+    "    process = subprocess.Popen(command, shell=True, stdout=subprocess.PIPE, stderr=subprocess.STDOUT)\n",
+    "    stdout, stderr = process.communicate()\n",
+    "        \n",
+    "        # delete FASTA file\n",
+    "        #os.remove(phanns_dir+'/uploads/'+this_id+'.fasta')\n",
+    "        \n",
+    "        # update bar\n",
+    "        #bar.update(1)\n",
+    "    #bar.close()\n",
+    "    \n",
+    "    # save results to a dataframe for later comparisons\n",
+    "    print('Getting results...')\n",
+    "    phanns_preds = []; phanns_score = []\n",
+    "    for this_id in sequences_df['protein_id']:\n",
+    "        this_result = pd.read_csv(phanns_dir+'/csv_saves/'+this_id+'.csv', index_col=0)\n",
+    "        this_class = this_result.idxmax(axis=1)[0]\n",
+    "        if this_class == 'Tail fiber':\n",
+    "            phanns_preds.append(1)\n",
+    "        else:\n",
+    "            phanns_preds.append(0)\n",
+    "        phanns_score.append(this_result['Confidence'][0])\n",
+    "        \n",
+    "    phanns_df = pd.DataFrame({'preds': phanns_preds, 'score': phanns_score})\n",
+    "    phanns_df.to_csv(results_dir+'/phanns_predictions.csv', index=False)\n",
+    "    print('Done.')\n",
+    "    \n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ad336582",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3078"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check? True\n",
+      "Check? True\n"
+     ]
     }
    ],
    "source": [
@@ -1359,8 +1465,100 @@
     "to_delete_nonrbps = [i for i, date in enumerate(nonrbps_em['RecordDate']) if all(x not in date for x in months)]\n",
     "nonrbps_2021 = nonrbps_em.drop(to_delete_nonrbps)\n",
     "nonrbps_2021 = nonrbps_2021.reset_index(drop=True)\n",
-    "testdata_2021 = pd.concat([rbps_2021, nonrbps_2021], axis=0)\n",
-    "print('Check?', testdata_2021.shape[0]==(rbps_2021.shape[0]+nonrbps_2021.shape[0]))"
+    "testdata = pd.concat([rbps_2021, nonrbps_2021], axis=0)\n",
+    "print('Check?', testdata.shape[0]==(rbps_2021.shape[0]+nonrbps_2021.shape[0]))\n",
+    "\n",
+    "# features for our XGBoost model\n",
+    "testfeatures = np.asarray(testdata.iloc[:, 2:])\n",
+    "testlabels = np.asarray([1]*rbps_2021.shape[0] + [0]*nonrbps_2021.shape[0])\n",
+    "\n",
+    "# sequence DF for PhANNs\n",
+    "rbps = pd.read_csv(data_dir+'/annotated_RBPs_2022-01.csv')\n",
+    "nonrbps = pd.read_csv(data_dir+'/annotated_nonRBPs_2022-01.csv')\n",
+    "rbps_2021 = rbps.drop(to_delete_rbps)\n",
+    "nonrbps_2021_ids = list(nonrbps_2021['protein_id'])\n",
+    "to_delete_nonrbps = [i for i, pid in enumerate(nonrbps['protein_id']) if pid not in nonrbps_2021_ids]\n",
+    "nonrbps_2021 = nonrbps.drop(to_delete_nonrbps)\n",
+    "testdata_df = pd.concat([rbps_2021, nonrbps_2021], axis=0)\n",
+    "testdata_df = testdata_df.reset_index(drop=True)\n",
+    "print('Check?', testdata.shape[0]==testdata_df.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09e20200",
+   "metadata": {},
+   "source": [
+    "#### Predictions with protein domains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a7b9e439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_blocks = ['Phage_T7_tail', 'Tail_spike_N', 'Prophage_tail', 'BppU_N', 'Mtd_N', \n",
+    "           'Head_binding', 'DUF3751', 'End_N_terminal', 'phage_tail_N', 'Prophage_tailD1', \n",
+    "           'DUF2163', 'Phage_fiber_2', 'phage_RBP_N1', 'phage_RBP_N4', 'phage_RBP_N26', \n",
+    "           'phage_RBP_N28', 'phage_RBP_N34', 'phage_RBP_N45']\n",
+    "C_blocks = ['Lipase_GDSL_2', 'Pectate_lyase_3', 'gp37_C', 'Beta_helix', 'Gp58', 'End_beta_propel', \n",
+    "            'End_tail_spike', 'End_beta_barrel', 'PhageP22-tail', 'Phage_spike_2', \n",
+    "            'gp12-short_mid', 'Collar', 'phage_RBP_C2', 'phage_RBP_C10', 'phage_RBP_C24',\n",
+    "            'phage_RBP_C43', 'phage_RBP_C59', 'phage_RBP_C60', 'phage_RBP_C62', 'phage_RBP_C67',\n",
+    "            'phage_RBP_C79', 'phage_RBP_C97', 'phage_RBP_C111', 'phage_RBP_C115', 'phage_RBP_C120'\n",
+    "            'phage_RBP_C126', 'phage_RBP_C138', 'phage_RBP_C43', 'phage_RBP_C157', 'phage_RBP_C164', \n",
+    "            'phage_RBP_C175', 'phage_RBP_C180', 'phage_RBP_C205', 'phage_RBP_C217', 'phage_RBP_C220', \n",
+    "            'phage_RBP_C221', 'phage_RBP_C223', 'phage_RBP_C234', 'phage_RBP_C235', 'phage_RBP_C237',\n",
+    "            'phage_RBP_C249', 'phage_RBP_C259', 'phage_RBP_C267', 'phage_RBP_C271', 'phage_RBP_C277',\n",
+    "            'phage_RBP_C281', 'phage_RBP_C292', 'phage_RBP_C293', 'phage_RBP_C296', 'phage_RBP_C300', \n",
+    "            'phage_RBP_C301', 'phage_RBP_C319', 'phage_RBP_C320', 'phage_RBP_C321', 'phage_RBP_C326', \n",
+    "            'phage_RBP_C331', 'phage_RBP_C337', 'phage_RBP_C338', 'phage_RBP_C340', 'Peptidase_S74', \n",
+    "            'Phage_fiber_C', 'S_tail_recep_bd', 'CBM_4_9', 'DUF1983', 'DUF3672']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "013674bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d5cfc01214314e5e91c59c06e7b14879",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scanning the genes:   0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "detected = rbpu.RBPdetect_domains(hmm_path, pfam_file, testdata_df['DNASeq'], testdata_df['protein_id'], \n",
+    "                                  N_blocks=N_blocks, C_blocks=C_blocks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dee4765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domain_preds = []\n",
+    "for pid in testdata_df['protein_id']:\n",
+    "    if pid in detected['identifier']:\n",
+    "        domain_preds.append(1)\n",
+    "    else:\n",
+    "        domain_preds.append(0)\n",
+    "domain_results = pd.DataFrame(domain_preds, columns=['preds'])\n",
+    "domain_results.to_csv(results_dir+'/domains_test_predictions.csv', index=False)"
    ]
   },
   {
@@ -1383,8 +1581,13 @@
     "xgb_saved.load_model(results_dir+'/RBPdetect_xgb_model.json')\n",
     "\n",
     "# make predictions with the XGBoost model\n",
-    "probs_xgb = xgb_saved.predict_proba(embeddings)[:,1]\n",
-    "preds_xgb = (probs_pos_iteration > 0.5)*1"
+    "score_xgb = xgb_saved.predict_proba(testfeatures)[:,1]\n",
+    "preds_xgb = (score_xgb > 0.5)*1\n",
+    "\n",
+    "# save predictions and scores\n",
+    "xgb_results = pd.concat([pd.DataFrame(preds_xgb, columns=['preds']), \n",
+    "                        pd.DataFrame(score_xgb, columns=['score'])], axis=1)\n",
+    "xgb_results.to_csv(results_dir+'/xgboost_test_predictions.csv', index=False)"
    ]
   },
   {
@@ -1392,38 +1595,48 @@
    "id": "051ae450",
    "metadata": {},
    "source": [
-    "#### Predictions PhANNs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66b818a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save all to test sequences as separate fasta files in PhANNs directory\n",
-    "rbps = pd.read_csv(data_dir+'/annotated_RBPs_2022-01.csv')\n",
-    "nonrbps = pd.read_csv(data_dir+'/annotated_nonRBPs_2022-01.csv')\n",
+    "#### Predictions with PhANNs\n",
     "\n",
-    "for identifier in rbps_2021['protein_id']:\n",
-    "    data_index = list(rbps['protein_id']).index(identifier)\n",
-    "    sequence = rbps['ProteinSeq'][data_index]\n",
-    "    temp_fasta = open('/Users/Dimi/GoogleDrive/PhD/3_PHAGEBASE/32_DATA/PhANNs_code/web_server/uploads/rbp_'+identifier+'.fasta')\n",
-    "    "
+    "It is estimated that this will run for about a day (24 hours), depending on your computer specs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "127a4088",
+   "execution_count": 29,
+   "id": "f907dd4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ecc6f8ea0f334f1fbe9a9992f31ff99c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5000\n",
+      "5000\n",
+      "5000\n",
+      "5000\n",
+      "5000\n",
+      "1725\n"
+     ]
+    }
+   ],
    "source": [
-    "# store predictions for further use (PR curves & PRAUC)\n",
-    "benchmark_results = pd.concat([pd.DataFrame(preds, columns=['Predictions']), \n",
-    "                        pd.DataFrame(probabilities, columns=['Probability negative', 'Probability positive'])], axis=1)\n",
-    "xgb_results.to_csv(results_dir+'/xgboost_4foldCV_results.csv', index=False)"
+    "for i in tqdm(range(0, testdata_df.shape[0], 5000)):\n",
+    "    end = min(5000, testdata_df.shape[0]-i)\n",
+    "    phanns_predict(testdata_df.iloc[:,i:i+end], phanns_dir, data_dir)"
    ]
   },
   {
@@ -1432,27 +1645,6 @@
    "metadata": {},
    "source": [
     "#### Clustering PhANNs RBPs with MillardLab RBPs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "dbb7d88f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'BAF95750.1tailfiberprotein[EnterobacteriaphageKEP10]'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "descr.replace(' ', '')"
    ]
   },
   {
